--- a/front_end/camp-lincoln/package.json
+++ b/front_end/camp-lincoln/package.json
@@ -20,6 +20,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-table": "^4.3.1",
+    "react-csv": "^2.0.3",
+    "react-csv-reader": "^3.0.5",
     "react-data-table-component": "^6.7.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
